plugins {
    id 'java'
}

group = 'me.cocolennon'
version = '1.1.2'

repositories {
    mavenCentral()
    mavenLocal()

    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot:1.20.6-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.5'
}

sourceCompatibility = targetCompatibility = '21'
compileJava.options.encoding = 'UTF-8'
setLibsDirName('../builds')